--- a/force-app/main/default/lwc/application/application.css
+++ b/force-app/main/default/lwc/application/application.css
@@ -2,8 +2,6 @@
     border-style: none;
 }
 
-
-
 .xc-grey-header {
     background-color: #c0bcb4;
     text-align: center;
@@ -19,10 +17,13 @@ ol {
     list-style: decimal inside none;
 }
 
+ul {
+    list-style: disc inside;
+}
+
 lightning-card {
     font-size: 1.4em;
 }
-
 
 .xc-red {
     color: red;
@@ -47,12 +48,19 @@ lightning-card {
 
 .main-card {
     padding: 32px;
+    line-height: 1.3;
 }
 
 @media only screen and (max-width: 600px) {
     .main-card {
         padding: 8px;
     }
+}
+
+.small-text {
+    font-size: 0.8em;
+    font-weight: 400;
+    line-height: 1.2;
 }
 
 .child-count {
@@ -86,9 +94,9 @@ lightning-card {
 
 .my-readonly {
     font-size: 1em;
-    font-weight: 400;
+    font-weight: 750;
     background-color: rgb(243, 243, 243);
-    padding: 3px 12px;
+    padding: 2px 12px;
     border: 1px solid #d8dde6;
     border-radius: 4px;
 }
