[UAT-6] Add new CSS class and update HTML content
Added a new CSS class 'small-cell-bottom' to better align the table cells. Also some content alterations were made in the HTML file to clarify support requirements; document elements were also updated to utilize the newly introduced CSS class.

--- a/force-app/main/default/lwc/application/application.css
+++ b/force-app/main/default/lwc/application/application.css
@@ -88,6 +88,12 @@ lightning-card {
     vertical-align: top;
 }
 
+.small-cell-bottom {
+    padding-top: 0;
+    padding-bottom: 0;
+    vertical-align: bottom;
+}
+
 .small-cell-icon {
     padding-top: 1em;
     padding-bottom: 0;
